[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Scenes/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Player/Bullet/bullet_simplified.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scenes/SoundFX.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 1 )

[node name="Bullet" type="Area2D"]
collision_layer = 16
collision_mask = 13
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Shoot"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SoundFX" parent="." instance=ExtResource( 3 )]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
